PROJET_INFO0602_MOREAUX_SAVARY/y.output
Terminaux inutilisés dans la grammaire

   VRAI
   FAUX
   PROC
   FINPROC
   FUNC
   FINFUNC
   AVANCER
   RECULER
   AVANCE
   RECULE
   VARIABLE
   I
   TANTQUE
   FINTANTQUE
   MAIN
   PRENDRE
   POSER


Grammaire

    0 $accept: json $end

    1 json: '{' element ',' element ',' element ',' element '}'

    2 element: LARGEUR ':' ENTIER
    3        | HAUTEUR ':' ENTIER
    4        | DEBUT ':' objetdebut
    5        | CASES ':' tableaucases

    6 objetdebut: '{' X ':' ENTIER ',' Y ':' ENTIER ',' DIRECTION ':' direction '}'

    7 direction: HAUT
    8          | BAS
    9          | GAUCHE
   10          | DROITE

   11 tableaucases: '[' objetcases ']'

   12 objetcases: '{' X ':' ENTIER ',' Y ':' ENTIER ',' TYPE ':' objettype '}'

   13 objettype: BLOC
   14          | BILLE
   15          | CAISSE
   16          | TROU


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
',' (44) 1 6 12
':' (58) 2 3 4 5 6 12
'[' (91) 11
']' (93) 11
'{' (123) 1 6 12
'}' (125) 1 6 12
error (256)
ENTIER (258) 2 3 6 12
VRAI (259)
FAUX (260)
LARGEUR (261) 2
HAUTEUR (262) 3
DEBUT (263) 4
X (264) 6 12
Y (265) 6 12
DIRECTION (266) 6
HAUT (267) 7
BAS (268) 8
GAUCHE (269) 9
DROITE (270) 10
CASES (271) 5
TYPE (272) 12
BLOC (273) 13
BILLE (274) 14
CAISSE (275) 15
TROU (276) 16
PROC (277)
FINPROC (278)
FUNC (279)
FINFUNC (280)
AVANCER (281)
RECULER (282)
AVANCE (283)
RECULE (284)
VARIABLE (285)
I (286)
TANTQUE (287)
FINTANTQUE (288)
MAIN (289)
PRENDRE (290)
POSER (291)


Non-terminaux, suivis des règles où ils apparaissent

$accept (43)
    à gauche: 0
json (44)
    à gauche: 1, à droite: 0
element (45)
    à gauche: 2 3 4 5, à droite: 1
objetdebut (46)
    à gauche: 6, à droite: 4
direction (47)
    à gauche: 7 8 9 10, à droite: 6
tableaucases (48)
    à gauche: 11, à droite: 5
objetcases (49)
    à gauche: 12, à droite: 11
objettype (50)
    à gauche: 13 14 15 16, à droite: 12


État 0

    0 $accept: . json $end

    '{'  décalage et aller à l'état 1

    json  aller à l'état 2


État 1

    1 json: '{' . element ',' element ',' element ',' element '}'

    LARGEUR  décalage et aller à l'état 3
    HAUTEUR  décalage et aller à l'état 4
    DEBUT    décalage et aller à l'état 5
    CASES    décalage et aller à l'état 6

    element  aller à l'état 7


État 2

    0 $accept: json . $end

    $end  décalage et aller à l'état 8


État 3

    2 element: LARGEUR . ':' ENTIER

    ':'  décalage et aller à l'état 9


État 4

    3 element: HAUTEUR . ':' ENTIER

    ':'  décalage et aller à l'état 10


État 5

    4 element: DEBUT . ':' objetdebut

    ':'  décalage et aller à l'état 11


État 6

    5 element: CASES . ':' tableaucases

    ':'  décalage et aller à l'état 12


État 7

    1 json: '{' element . ',' element ',' element ',' element '}'

    ','  décalage et aller à l'état 13


État 8

    0 $accept: json $end .

    $défaut  accepter


État 9

    2 element: LARGEUR ':' . ENTIER

    ENTIER  décalage et aller à l'état 14


État 10

    3 element: HAUTEUR ':' . ENTIER

    ENTIER  décalage et aller à l'état 15


État 11

    4 element: DEBUT ':' . objetdebut

    '{'  décalage et aller à l'état 16

    objetdebut  aller à l'état 17


État 12

    5 element: CASES ':' . tableaucases

    '['  décalage et aller à l'état 18

    tableaucases  aller à l'état 19


État 13

    1 json: '{' element ',' . element ',' element ',' element '}'

    LARGEUR  décalage et aller à l'état 3
    HAUTEUR  décalage et aller à l'état 4
    DEBUT    décalage et aller à l'état 5
    CASES    décalage et aller à l'état 6

    element  aller à l'état 20


État 14

    2 element: LARGEUR ':' ENTIER .

    $défaut  réduction par utilisation de la règle 2 (element)


État 15

    3 element: HAUTEUR ':' ENTIER .

    $défaut  réduction par utilisation de la règle 3 (element)


État 16

    6 objetdebut: '{' . X ':' ENTIER ',' Y ':' ENTIER ',' DIRECTION ':' direction '}'

    X  décalage et aller à l'état 21


État 17

    4 element: DEBUT ':' objetdebut .

    $défaut  réduction par utilisation de la règle 4 (element)


État 18

   11 tableaucases: '[' . objetcases ']'

    '{'  décalage et aller à l'état 22

    objetcases  aller à l'état 23


État 19

    5 element: CASES ':' tableaucases .

    $défaut  réduction par utilisation de la règle 5 (element)


État 20

    1 json: '{' element ',' element . ',' element ',' element '}'

    ','  décalage et aller à l'état 24


État 21

    6 objetdebut: '{' X . ':' ENTIER ',' Y ':' ENTIER ',' DIRECTION ':' direction '}'

    ':'  décalage et aller à l'état 25


État 22

   12 objetcases: '{' . X ':' ENTIER ',' Y ':' ENTIER ',' TYPE ':' objettype '}'

    X  décalage et aller à l'état 26


État 23

   11 tableaucases: '[' objetcases . ']'

    ']'  décalage et aller à l'état 27


État 24

    1 json: '{' element ',' element ',' . element ',' element '}'

    LARGEUR  décalage et aller à l'état 3
    HAUTEUR  décalage et aller à l'état 4
    DEBUT    décalage et aller à l'état 5
    CASES    décalage et aller à l'état 6

    element  aller à l'état 28


État 25

    6 objetdebut: '{' X ':' . ENTIER ',' Y ':' ENTIER ',' DIRECTION ':' direction '}'

    ENTIER  décalage et aller à l'état 29


État 26

   12 objetcases: '{' X . ':' ENTIER ',' Y ':' ENTIER ',' TYPE ':' objettype '}'

    ':'  décalage et aller à l'état 30


État 27

   11 tableaucases: '[' objetcases ']' .

    $défaut  réduction par utilisation de la règle 11 (tableaucases)


État 28

    1 json: '{' element ',' element ',' element . ',' element '}'

    ','  décalage et aller à l'état 31


État 29

    6 objetdebut: '{' X ':' ENTIER . ',' Y ':' ENTIER ',' DIRECTION ':' direction '}'

    ','  décalage et aller à l'état 32


État 30

   12 objetcases: '{' X ':' . ENTIER ',' Y ':' ENTIER ',' TYPE ':' objettype '}'

    ENTIER  décalage et aller à l'état 33


État 31

    1 json: '{' element ',' element ',' element ',' . element '}'

    LARGEUR  décalage et aller à l'état 3
    HAUTEUR  décalage et aller à l'état 4
    DEBUT    décalage et aller à l'état 5
    CASES    décalage et aller à l'état 6

    element  aller à l'état 34


État 32

    6 objetdebut: '{' X ':' ENTIER ',' . Y ':' ENTIER ',' DIRECTION ':' direction '}'

    Y  décalage et aller à l'état 35


État 33

   12 objetcases: '{' X ':' ENTIER . ',' Y ':' ENTIER ',' TYPE ':' objettype '}'

    ','  décalage et aller à l'état 36


État 34

    1 json: '{' element ',' element ',' element ',' element . '}'

    '}'  décalage et aller à l'état 37


État 35

    6 objetdebut: '{' X ':' ENTIER ',' Y . ':' ENTIER ',' DIRECTION ':' direction '}'

    ':'  décalage et aller à l'état 38


État 36

   12 objetcases: '{' X ':' ENTIER ',' . Y ':' ENTIER ',' TYPE ':' objettype '}'

    Y  décalage et aller à l'état 39


État 37

    1 json: '{' element ',' element ',' element ',' element '}' .

    $défaut  réduction par utilisation de la règle 1 (json)


État 38

    6 objetdebut: '{' X ':' ENTIER ',' Y ':' . ENTIER ',' DIRECTION ':' direction '}'

    ENTIER  décalage et aller à l'état 40


État 39

   12 objetcases: '{' X ':' ENTIER ',' Y . ':' ENTIER ',' TYPE ':' objettype '}'

    ':'  décalage et aller à l'état 41


État 40

    6 objetdebut: '{' X ':' ENTIER ',' Y ':' ENTIER . ',' DIRECTION ':' direction '}'

    ','  décalage et aller à l'état 42


État 41

   12 objetcases: '{' X ':' ENTIER ',' Y ':' . ENTIER ',' TYPE ':' objettype '}'

    ENTIER  décalage et aller à l'état 43


État 42

    6 objetdebut: '{' X ':' ENTIER ',' Y ':' ENTIER ',' . DIRECTION ':' direction '}'

    DIRECTION  décalage et aller à l'état 44


État 43

   12 objetcases: '{' X ':' ENTIER ',' Y ':' ENTIER . ',' TYPE ':' objettype '}'

    ','  décalage et aller à l'état 45


État 44

    6 objetdebut: '{' X ':' ENTIER ',' Y ':' ENTIER ',' DIRECTION . ':' direction '}'

    ':'  décalage et aller à l'état 46


État 45

   12 objetcases: '{' X ':' ENTIER ',' Y ':' ENTIER ',' . TYPE ':' objettype '}'

    TYPE  décalage et aller à l'état 47


État 46

    6 objetdebut: '{' X ':' ENTIER ',' Y ':' ENTIER ',' DIRECTION ':' . direction '}'

    HAUT    décalage et aller à l'état 48
    BAS     décalage et aller à l'état 49
    GAUCHE  décalage et aller à l'état 50
    DROITE  décalage et aller à l'état 51

    direction  aller à l'état 52


État 47

   12 objetcases: '{' X ':' ENTIER ',' Y ':' ENTIER ',' TYPE . ':' objettype '}'

    ':'  décalage et aller à l'état 53


État 48

    7 direction: HAUT .

    $défaut  réduction par utilisation de la règle 7 (direction)


État 49

    8 direction: BAS .

    $défaut  réduction par utilisation de la règle 8 (direction)


État 50

    9 direction: GAUCHE .

    $défaut  réduction par utilisation de la règle 9 (direction)


État 51

   10 direction: DROITE .

    $défaut  réduction par utilisation de la règle 10 (direction)


État 52

    6 objetdebut: '{' X ':' ENTIER ',' Y ':' ENTIER ',' DIRECTION ':' direction . '}'

    '}'  décalage et aller à l'état 54


État 53

   12 objetcases: '{' X ':' ENTIER ',' Y ':' ENTIER ',' TYPE ':' . objettype '}'

    BLOC    décalage et aller à l'état 55
    BILLE   décalage et aller à l'état 56
    CAISSE  décalage et aller à l'état 57
    TROU    décalage et aller à l'état 58

    objettype  aller à l'état 59


État 54

    6 objetdebut: '{' X ':' ENTIER ',' Y ':' ENTIER ',' DIRECTION ':' direction '}' .

    $défaut  réduction par utilisation de la règle 6 (objetdebut)


État 55

   13 objettype: BLOC .

    $défaut  réduction par utilisation de la règle 13 (objettype)


État 56

   14 objettype: BILLE .

    $défaut  réduction par utilisation de la règle 14 (objettype)


État 57

   15 objettype: CAISSE .

    $défaut  réduction par utilisation de la règle 15 (objettype)


État 58

   16 objettype: TROU .

    $défaut  réduction par utilisation de la règle 16 (objettype)


État 59

   12 objetcases: '{' X ':' ENTIER ',' Y ':' ENTIER ',' TYPE ':' objettype . '}'

    '}'  décalage et aller à l'état 60


État 60

   12 objetcases: '{' X ':' ENTIER ',' Y ':' ENTIER ',' TYPE ':' objettype '}' .

    $défaut  réduction par utilisation de la règle 12 (objetcases)
